--- a/src/less/testEval.less
+++ b/src/less/testEval.less
@@ -1,15 +1,18 @@
+#__bs_notify__{ /* TODO: 开发完成后,去掉 */
+  display: none!important;
+}
 .container{
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgba(0,0,0,0.3);
-  z-index: 999;
+  // position: fixed;
+  // top: 0;
+  // bottom: 0;
+  // left: 0;
+  // right: 0;
+  // background-color: rgba(0,0,0,0.3);
+  // z-index: 999;
   .eval{
-    position: absolute;
-    bottom: 0;
-    left: 0;
+    // position: absolute;
+    // bottom: 0;
+    // left: 0;
     width: 100%;
     height: 800px;
     background-color: #ffffff;
@@ -28,6 +31,13 @@
       }
       .right{
         font-size: 24px;
+        .bord{
+          display: inline-block;
+          width: 20px;
+          height: 20px;
+          border: 1px solid #ececec;
+          border-radius: 50%;
+        }
       }
     }
   }
