--- a/src/less/testEval.less
+++ b/src/less/testEval.less
@@ -105,6 +105,7 @@
       box-sizing: border-box;
       width: 100%;
       height: 100%;
+      resize: none;
       font-size: 32px;
       color: #333333;
       padding: 26px 24px;
