--- a/src/less/testEval.less
+++ b/src/less/testEval.less
@@ -69,7 +69,7 @@
       color: #FFA32C;
     }
   }
-  .evalDescribe{
+  .evalDescribe p{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
