--- a/src/less/testEval.less
+++ b/src/less/testEval.less
@@ -1,6 +1,9 @@
 #__bs_notify__{ /* TODO: 开发完成后,去掉 */
   display: none!important;
 }
+html{
+  background-color: #ffffff;
+}
 .container{
   // position: fixed;
   // top: 0;
